<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HasilActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/nama_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tipePlgn_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tipe_pelanggan2"
        android:layout_marginLeft="20dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/kodeBrg_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kode_barang2"
        android:layout_marginLeft="20dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/harga_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/harga"
        android:layout_marginLeft="20dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/jmlBrg_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jumlah_barang2"
        android:layout_marginLeft="20dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/Total_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_harga"
        android:layout_marginLeft="20dp"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:layout_marginTop="25dp"
        android:textSize="20sp"
        android:layout_gravity="center"/>

</LinearLayout>