<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/shop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_shop"
        android:padding="20dp"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_nama">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tipe_plgn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tipe_pelanggan"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <RadioButton
            android:id="@+id/btn_gold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gold"/>

        <RadioButton
            android:id="@+id/btn_silver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/silver"/>

        <RadioButton
            android:id="@+id/btn_biasa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biasa"/>

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nama_barang"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/kode_brg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/jumlah_barang"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/jml_brg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_process"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/process"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>
</LinearLayout>